增加标题独立样式